Updated prototype for free drawing!

--- a/prototype.html
+++ b/prototype.html
@@ -44,7 +44,7 @@
 	<script type="text/javascript" src="javascript/tts.js"></script>
 	<script type="text/javascript" src="javascript/vr.js"></script>
 	<script type="text/javascript" src="javascript/sr.js"></script>
-	<script type="text/javascript" src="javascript/learn.js"></script>
+	<script type="text/javascript" src="javascript/dbs.js"></script>
 	
 </body>
 </html>
