--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 
 <p><iframe width="560" height="315" src="//www.youtube.com/embed/g8sGNHEa6hU" frameborder="0" allowfullscreen></iframe></p>
 
-<p>...or check a <a href="prototype.html" target="_new">protoype of the UI.</a></p>
+<p>...or check out a <a href="prototype.html" target="_new">protoype of the UI.</a>(opens in a new tab)</p>
 
 <h3>
 <a name="who" class="anchor" href="#who"><span class="octicon octicon-link"></span></a>Who is it for?</h3>
 
-<p>Personas:</p>
-- <a href="Personas/Persona-01.html"></a>Dan Ariely, Creative Director - finds inspiration and stress relief in our app</a>
-- <a href="Personas/Persona-02.html">John Smith, CEO - uses Sinaesthetic for stress relief and productivity increase in his company</a>
-- <a href="Personas/Persona-03.html">Mike Stone, University Student - being visually impaired, Sinaesthetic helps express his artistic talent and also helps with his academic pursuits</a>
-- <a href="Personas/Persona-04.html">Sara Simpson, High School Student - finds Sinaesthetic fun, addictive and trendy</a>
+<p>Personas (clicking on the links opens new tabs):</p>
+- <a href="Personas/Persona-01.html" target="_new">Dan Ariely, Creative Director - finds inspiration and stress relief in our app</a>
+- <a href="Personas/Persona-02.html" target="_new">John Smith, CEO - uses Sinaesthetic for stress relief and productivity increase in his company</a>
+- <a href="Personas/Persona-03.html" target="_new">Mike Stone, University Student - being visually impaired, Sinaesthetic helps express his artistic talent and also helps with his academic pursuits</a>
+- <a href="Personas/Persona-04.html" target="_new">Sara Simpson, High School Student - finds Sinaesthetic fun, addictive and trendy</a>
 
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Project Identity</h3>
@@ -63,7 +63,8 @@ Questions, Options, Criteria</h3>
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>- Alexandru Tronciu (<a href="https://github.com/tralexel" class="user-mention">@tralexel</a>: prototype, UI, tutorial</p>
+<p>- Radu Grigoras (<a href="https://github.com/radugr" class="user-mention">@radugr</a>): project identity, personas, QOC, <a href="http://www.github.com">GitHub</a> <a href="http://radugr.github.io/Sinaesthetic/">page and <a href="https://github.com/radugr/Sinaesthetic/"></a>repo</a>.</p>
       </section>
     </div>
 
