--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ Questions, Options, Criteria</h3>
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>- Alexandru Tronciu (<a href="https://github.com/tralexel" class="user-mention">@tralexel</a>: prototype, UI, tutorial</p>
-<p>- Radu Grigoras (<a href="https://github.com/radugr" class="user-mention">@radugr</a>): project identity, personas, QOC, <a href="http://www.github.com">GitHub</a> <a href="http://radugr.github.io/Sinaesthetic/">page and <a href="https://github.com/radugr/Sinaesthetic/"></a>repo</a>.</p>
+<p>- Alexandru Tronciu (<a href="https://github.com/tralexel" class="user-mention">@tralexel</a>): prototype, UI, tutorial</p>
+<p>- Radu Grigoras (<a href="https://github.com/radugr" class="user-mention">@radugr</a>): project identity, personas, QOC, <a href="http://www.github.com">GitHub</a> <a href="http://radugr.github.io/Sinaesthetic/">page</a> and <a href="https://github.com/radugr/Sinaesthetic/">repo</a>.</p>
       </section>
     </div>
 
