--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
 <p>Personas (clicking on the links opens new tabs):</p>
 <ul>
-<li><a href="Personas/Persona-01.html" target="_new">Dan Ariely, Creative Director - finds inspiration and stress relief in our app</a></li>
-<li><a href="Personas/Persona-02.html" target="_new">John Smith, CEO - uses Sinaesthetic for stress relief and productivity increase in his company</a></li>
-<li><a href="Personas/Persona-03.html" target="_new">Mike Stone, University Student - being visually impaired, Sinaesthetic helps express his artistic talent and also helps with his academic pursuits</a></li>
-<li><a href="Personas/Persona-04.html" target="_new">Sara Simpson, High School Student - finds Sinaesthetic fun, addictive and trendy</a></li>
+<li><a href="Personas/Persona-01.html" target="_new">Dan Ariely, Creative Director </a>- finds inspiration and stress relief in our app</li>
+<li><a href="Personas/Persona-02.html" target="_new">John Smith, CEO </a>- uses Sinaesthetic for stress relief and productivity increase in his company</li>
+<li><a href="Personas/Persona-03.html" target="_new">Mike Stone, University Student</a> - being visually impaired, Sinaesthetic helps express his artistic talent and also helps with his academic pursuits</li>
+<li><a href="Personas/Persona-04.html" target="_new">Sara Simpson, High School Student</a> - finds Sinaesthetic fun, addictive and trendy</li>
 </ul>
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Project Identity</h3>
@@ -64,7 +64,7 @@ Questions, Options, Criteria</h3>
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p><ul><li></p>Alexandru Tronciu (<a href="https://github.com/tralexel" class="user-mention">@tralexel</a>): prototype, UI, tutorial</li>
+<p><ul><li>Alexandru Tronciu (<a href="https://github.com/tralexel" class="user-mention">@tralexel</a>): prototype, UI, tutorial</li>
 <li>Radu Grigoras (<a href="https://github.com/radugr" class="user-mention">@radugr</a>): project identity, personas, QOC, <a href="http://www.github.com">GitHub</a> <a href="http://radugr.github.io/Sinaesthetic/">page</a> and <a href="https://github.com/radugr/Sinaesthetic/">repo</a>.</li></ul></p>
       </section>
     </div>
