--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <p><iframe width="560" height="315" src="//www.youtube.com/embed/g8sGNHEa6hU" frameborder="0" allowfullscreen></iframe></p>
 
-<p>...or check out a <a href="prototype.html" target="_new">protoype of the UI.</a>(opens in a new tab)</p>
+<p>...or check out a <a href="prototype.html" target="_new">protoype of the UI</a> (opens in a new tab).</p>
 
 <h3>
 <a name="who" class="anchor" href="#who"><span class="octicon octicon-link"></span></a>Who is it for?</h3>
