--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/radugr/Sinaesthetic">View on GitHub</a>
 
-          <h1 id="project_title"><img src="images/logo.png"/>Sinaesthetic</h1>
+          <h1 id="project_title"><img src="images/logo.png" height="100px" width="100px"/>Sinaesthetic</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
