--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/radugr/Sinaesthetic">View on GitHub</a>
-
-          <h1 id="project_title"><img src="images/logo.png" height="40%" width="40%"/></h1>
+          <img src="images/logo.png" height="40%" width="40%"/>
+          <h1 id="project_title"></h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
