--- a/index.html
+++ b/index.html
@@ -59,7 +59,54 @@
 <a name="qoc" class="anchor" href="#qoc"><span class="octicon octicon-link"></span></a>
 Questions, Options, Criteria</h3>
 
-<p>QOC related stuff goes here.</p>
+<p>Q1: Where to position toolbar?<br/>
+O: Left<br/>
+O: Right<br/>
+O: Top<br/>
+O: Bottom<br/>
+O: Left or Right and Top<br/>
+O: Left or Right and Bottom<br/>
+O: Left and Right<br/>
+O: Top and Bottom<br/>
+O: Invisible (tools activated by sounds only)<br/>
+C: Familiar<br/>
+C: Simmetric<br/>
+C: Relevant tool grouping<br/>
+C: Low user effort<br/>
+C: Efficient screen space usage<br/>
+C: Easy to use<br/>
+C: Good canvas focus</p>
+
+<p>Conclusion: Popular drawing software such as Microsoft Paint or Adobe Photoshop usually have the most used 
+tools (pen, color selector etc.) in a toolbar on the left and some general tools (save, undo etc.) in a menu 
+on top. This separation helps logically group tools and keeps the user in a familiar environment. However, 
+the top menu is a main trait of desktop applications and the number of tools offered does not require 
+cascading menu grouping. In order to save screen space and center the canvas for good focus, placing the 
+drawing tools on the left to preserve familiarity and the general, utility tools on the right, seems like the 
+best solution.</p>
+
+<p>Q2: Type of sounds recognized?<br/>
+O: Musical notes<br/>
+O: Words<br/>
+C: Intuitive<br/>
+C: Language independent<br/>
+C: High number of possible commands<br/>
+C: Easy to use</p>
+
+<p>Conclusion: While drawing by playing music is language independent and can create a high number of possible 
+commands, using actual words to draw is more intuitive and easier to use while also not restricting the 
+number of possible commands. Also adding the fact that it can be implemented easier and more reliable using 
+voice recognition engines, drawing by using words seems to be the best solution.</p>
+
+<p>Q3: How to draw using words?<br/>
+O: Instruction based ("move left 3 units", "brush color red" etc.)<br/>
+O: Based on the physical characteristic of the sound (pitch, length etc.)<br/>
+C: Easy to use<br/>
+C: Intuitive<br/>
+C: High accuracy</p>
+
+<p>Conclusion: Using exact instructions offers a much higher accuracy and ease of use and seems to be the best 
+solution.</p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
