--- a/index.html
+++ b/index.html
@@ -53,13 +53,55 @@
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Project Identity</h3>
 
-<p>Stuff about logo, color scheme etc.</p>
+<p><strong>Color scheme</strong></p>
+
+<p>Justification of the chromatic choice for the visual identity of the application: the chromatic combination 
+between blue and orange is designed to be aesthetically pleasant and to emphasize the characteristics of both
+colors, given the contrasting nature of this combination. These two colors are usually used in professional 
+circumstances for two age categories: young and middle-age, they have in common the tendency to both 
+concentrate and relax. It is scientifically proven that, while orange accesses the left hemisphere of the 
+brain, blue accesses the right one. Combining the two sets of capacities and functions of the human brain 
+usually helps to visually concentrate to stimuli, regardless of their nature. In other words, whenever this 
+chromatic combination is used, the subject is going to improve his performance of the cognitive processes of
+both intellectual and artistic brain functions. There are no further suggestions regarding the gender of the
+target that shold be taken into consideration, reason for which this combination is suitable for both men and 
+women equally.</p>
+Concerning the inner given meaning of each of these colors by experts in visual arts, blue is generally 
+regarded as a great stimulus for patience, peace and calmness, while orange represents friendliness and 
+trustworthiness of the given environment, while it also covers the energy boost necessary to keeping focused. 
+In combination, these two colors tend to help the subject keep focused for a longer period of time. Since 
+it's scientifically proven that the human brain cannot remain focused for more than 20 minutes continuously, 
+unless there are exceptional conditions, this chromatic combination is proven to have kept the subjects 
+focused for more than half an hour in an unfriendly and distractive environment. 
+
+<p><strong>Naming</strong></p>
+
+<p>Synesthezia is the cognitive capacity of the brain to mistaken a stimulus of a kind after having recieved it 
+and decoding it in another stimulus' manner. For instance, a visual stimulus can be perceived by a subject 
+like a sound or like a state of mind. This kind of misinterpretation of the human brain is today believed to 
+be a cognitive dysfunction. However, history shows, this kind of twisted cognitive perception has helped 
+enrich the artistic perception of great personalities, by managing to combine two different perceptions and 
+obtain another given feeling from their blending. In the context of this application, synesthezia is used to
+metaphorically represent the two different kinds of stimuli that are used, interpreted and transformed. 
+Another meaning of the first part in the naming of this application (explaining the use of 'i' instead of 
+'y') is based on the sinus-cosinus relationship and the complementarity between these two - similarly, the
+two distinct senses are being transformed into a complementary result of their combination. Aesthetically 
+speaking, the capacity to transform an acoustic stimulus into a visual representation isn't only based on a 
+common act of semiosis, but also implies that there is a converging result of artistic nature, meaning that 
+both semiotically speaking and aesthetically at the same time, the application in itself stands for a 
+senzorial improvement. Concerning the semiosis, the act of decodification and representation of a stimulus 
+towards another one, the complexity of the reality that is represented through the initial stimulus increases 
+proportionally with its corespondent representation, making it not only useful but also aesthetically 
+pleasant. The sinus and cosinus are perceived by the human brain in an interdependent relation of 
+complementarity, and so are the complementary colors used in the visual identity of the application (blue and 
+orange), suggesting the semiotic complementarity of the senses that are being involved in the codification-
+decodification-recodification-representation process implied, thus creating a visual identitary unity. </p>
 
 <h3>
 <a name="qoc" class="anchor" href="#qoc"><span class="octicon octicon-link"></span></a>
 Questions, Options, Criteria</h3>
 
-<p>Q1: Where to position toolbar?<br/>
+<p><strong>Q1: Where to position toolbar?</strong><br/>
 O: Left<br/>
 O: Right<br/>
 O: Top<br/>
@@ -77,7 +119,7 @@ C: Efficient screen space usage<br/>
 C: Easy to use<br/>
 C: Good canvas focus</p>
 
-<p>Conclusion: Popular drawing software such as Microsoft Paint or Adobe Photoshop usually have the most used 
+<p><i>Conclusion:</i> Popular drawing software such as Microsoft Paint or Adobe Photoshop usually have the most used 
 tools (pen, color selector etc.) in a toolbar on the left and some general tools (save, undo etc.) in a menu 
 on top. This separation helps logically group tools and keeps the user in a familiar environment. However, 
 the top menu is a main trait of desktop applications and the number of tools offered does not require 
@@ -85,7 +127,7 @@ cascading menu grouping. In order to save screen space and center the canvas for
 drawing tools on the left to preserve familiarity and the general, utility tools on the right, seems like the 
 best solution.</p>
 
-<p>Q2: Type of sounds recognized?<br/>
+<p><strong>Q2: Type of sounds recognized?</strong><br/>
 O: Musical notes<br/>
 O: Words<br/>
 C: Intuitive<br/>
@@ -93,19 +135,19 @@ C: Language independent<br/>
 C: High number of possible commands<br/>
 C: Easy to use</p>
 
-<p>Conclusion: While drawing by playing music is language independent and can create a high number of possible 
+<p><i>Conclusion:</i> While drawing by playing music is language independent and can create a high number of possible 
 commands, using actual words to draw is more intuitive and easier to use while also not restricting the 
 number of possible commands. Also adding the fact that it can be implemented easier and more reliable using 
 voice recognition engines, drawing by using words seems to be the best solution.</p>
 
-<p>Q3: How to draw using words?<br/>
+<p><strong>Q3: How to draw using words?</strong><br/>
 O: Instruction based ("move left 3 units", "brush color red" etc.)<br/>
 O: Based on the physical characteristic of the sound (pitch, length etc.)<br/>
 C: Easy to use<br/>
 C: Intuitive<br/>
 C: High accuracy</p>
 
-<p>Conclusion: Using exact instructions offers a much higher accuracy and ease of use and seems to be the best 
+<p><i>Conclusion:</i> Using exact instructions offers a much higher accuracy and ease of use and seems to be the best 
 solution.</p>
 
 <h3>
