--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <p>Personas (clicking on the links opens new tabs):</p>
 <ul>
-<li><a href="Personas/Persona-01.html" target="_new">Dan Ariely, Creative Director </a>- finds inspiration and stress relief in our app</li>
+<li><a href="Personas/Persona-01.html" target="_new">Dan Johnson, Creative Director </a>- finds inspiration and stress relief in our app</li>
 <li><a href="Personas/Persona-02.html" target="_new">John Smith, CEO </a>- uses Sinaesthetic for stress relief and productivity increase in his company</li>
 <li><a href="Personas/Persona-03.html" target="_new">Mike Stone, University Student</a> - being visually impaired, Sinaesthetic helps express his artistic talent and also helps with his academic pursuits</li>
 <li><a href="Personas/Persona-04.html" target="_new">Sara Simpson, High School Student</a> - finds Sinaesthetic fun, addictive and trendy</li>
