--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="about" class="anchor" href="#about"><span class="octicon octicon-link"></span></a>What is Sinaesthetic?</h3>
 
-<p>Sinaesthetic is a draw-by-sound web application. A sound recognition system takes user input, parses it and controls the application based on the recognised sounds. Take a look at the tutorial to get a glimpse of the Sinaesthetic prototype:</p>
+<p>Sinaesthetic is a draw-by-sound web application. A sound recognition system takes user input, parses it and controls the application based on the recognised sounds. Take a look at the <a href="tutorial.html">tutorial</a> (currently available only for the Chrome browser) to get a glimpse of the Sinaesthetic prototype:</p>
 
 <p><iframe width="560" height="315" src="//www.youtube.com/embed/g8sGNHEa6hU" frameborder="0" allowfullscreen></iframe></p>
 
