--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <li><a href="Personas/Persona-04.html" target="_new">Sara Simpson, High School Student</a> - finds Sinaesthetic fun, addictive and trendy</li>
 </ul>
 <h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Project Identity</h3>
+<a name="identity" class="anchor" href="#identity"><span class="octicon octicon-link"></span></a>Project Identity</h3>
 
 <p><strong>Color scheme</strong></p>
 
