added components, interaction and accesibility

--- a/index.html
+++ b/index.html
@@ -41,17 +41,42 @@
 <p>...or check out a <a href="prototype.html" target="_new">protoype of the UI</a> (opens in a new tab).</p>
 
 <h3>
-<a name="who" class="anchor" href="#who"><span class="octicon octicon-link"></span></a>Who is it for?</h3>
+  <a name="interaction" class="anchor" href="#interaction"><span class="octicon octicon-link"></span></a>
+Application interaction</h3>
+</h3>
+<p> The user can interact through the application by sound. Input is received either by voice or music instrument sounds and the feedback is provided
+  through app recorded sounds and text to speech.
+</p>
 
-<p>Personas (clicking on the links opens new tabs):</p>
-<ul>
-<li><a href="Personas/Persona-01.html" target="_new">Dan Johnson, Creative Director </a>- finds inspiration and stress relief in our app</li>
-<li><a href="Personas/Persona-02.html" target="_new">John Smith, CEO </a>- uses Sinaesthetic for stress relief and productivity increase in his company</li>
-<li><a href="Personas/Persona-03.html" target="_new">Mike Stone, University Student</a> - being visually impaired, Sinaesthetic helps express his artistic talent and also helps with his academic pursuits</li>
-<li><a href="Personas/Persona-04.html" target="_new">Sara Simpson, High School Student</a> - finds Sinaesthetic fun, addictive and trendy</li>
-</ul>
 <h3>
-<a name="identity" class="anchor" href="#identity"><span class="octicon octicon-link"></span></a>Project Identity</h3>
+<a name="components" class="anchor" href="#components"><span class="octicon octicon-link"></span></a>
+Application components</h3>
+
+<p><strong>Voice driven drawing: </strong> The application provides voice controls for drawing. 
+Besides the usual editing commands like save, empty and restore, voice controls include selecting a color, a paint tool, positioning it on the canavas drawing.</p>
+<p><strong>Sound driven drawing:</strong> The application controls can be mapped to the sounds chosen by the user, for example
+  an user may chose the map the application controls to piano keys ( same as the ones described above).
+</p>
+<p><strong>Painting to sound:</strong> The application is able to replay a painting through sound, similar to a sonar. 
+The painting is transformed from a two dimensional pixel map to a liniar sound stream in which each pixel is transformed
+to a sound. This feature will also aid accesibility for visual impaired persons.  
+</p>
+<p><strong>Tutorials</strong> The application provides interactive tutorials through which users can learn the application
+  controls. 
+</p>
+
+<h3>
+<a name="who" class="anchor" href="#who"><span class="octicon octicon-link"></span></a>Who is it for?</h3>
+<p>Personas (clicking on the links opens new tabs):</p>
+ <ul>
+ <li><a href="Personas/Persona-01.html" target="_new">Dan Johnson, Creative Director </a>- finds inspiration and stress relief in our app</li>
+ <li><a href="Personas/Persona-02.html" target="_new">John Smith, CEO </a>- uses Sinaesthetic for stress relief and productivity increase in his company</li>
+ <li><a href="Personas/Persona-03.html" target="_new">Mike Stone, University Student</a> - being visually impaired, Sinaesthetic helps express his artistic talent and also helps with his academic pursuits</li>
+ <li><a href="Personas/Persona-04.html" target="_new">Sara Simpson, High School Student</a> - finds Sinaesthetic fun, addictive and trendy</li>
+</ul>
+
+<h3>
+<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Project Identity</h3>
 
 <p><strong>Color scheme</strong></p>
 
@@ -149,6 +174,10 @@ C: High accuracy</p>
 
 <p><i>Conclusion:</i> Using exact instructions offers a much higher accuracy and ease of use and seems to be the best 
 solution.</p>
+
+<h3>
+<a name="accesibility" class="anchor" href="#accesibility"><span class="octicon octicon-link"></span></a>Accesibility</h3>
+<p> Through its componets and tutorials, the application provides a way to paint for visually impaired people. </p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
