--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ Application interaction</h3>
 </p>
 
 <h3>
-<a name="components" class="anchor" href="#components"><span class="octicon octicon-link"></span></a>
-Application components</h3>
+<a name="concepts" class="anchor" href="#concepts"><span class="octicon octicon-link"></span></a>
+Application concepts</h3>
 
 <p><strong>Voice driven drawing: </strong> The application provides voice controls for drawing. 
 Besides the usual editing commands like save, empty and restore, voice controls include selecting a color, a paint tool, positioning it on the canavas drawing.</p>
