Added tutorials. Fixed colors.

--- a/prototype.html
+++ b/prototype.html
@@ -90,6 +90,42 @@
 		    <td class="tg-031e"><canvas id="brushColor23" class="color"></td>
 		    <td class="tg-031e"><canvas id="brushColor24" class="color"></td>
 		  </tr>
+		  <tr>
+		    <td class="tg-031e"><canvas id="brushColor25" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor26" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor27" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor28" class="color"></td>
+		  </tr>
+		  <tr>
+		    <td class="tg-031e"><canvas id="brushColor29" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor30" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor31" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor32" class="color"></td>
+		  </tr>
+		  <tr>
+		    <td class="tg-031e"><canvas id="brushColor33" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor34" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor35" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor36" class="color"></td>
+		  </tr>
+		  <tr>
+		    <td class="tg-031e"><canvas id="brushColor37" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor38" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor39" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor40" class="color"></td>
+		  </tr>
+		  <tr>
+		    <td class="tg-031e"><canvas id="brushColor41" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor42" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor43" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor44" class="color"></td>
+		  </tr>
+		  <tr>
+		    <td class="tg-031e"><canvas id="brushColor45" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor46" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor47" class="color"></td>
+		    <td class="tg-031e"><canvas id="brushColor48" class="color"></td>
+		  </tr>
 		</table>
 	</div>	
 
@@ -112,6 +148,8 @@
 	<script type="text/javascript" src="javascript/dbs.js"></script>
 	<script type="text/javascript" src="javascript/persist.js"></script>
 	<script type="text/javascript" src="javascript/drawing-settings.js"></script>
+	<script type="text/javascript" src="javascript/loadImage.js"></script>
+	<script type="text/javascript" src="javascript/predefinedDrawings.js"></script>
 	
 </body>
 </html>
