--- a/tutorial-drawing.html
+++ b/tutorial-drawing.html
@@ -18,7 +18,7 @@
 		<button id="savebutton" class="deactivated buttons  el-icon-download-alt"></button>
 		<button id="loadbutton" class="deactivated buttons el-icon-folder-open"></button>
 		<button id="refreshbutton" class="deactivated buttons el-icon-refresh"></button>
-		<button id="tutorial" class="deactivated buttons el-icon-book"></button>
+		<button id="tutorialbutton" class="deactivated buttons el-icon-book"></button>
 	</div>
 	
 	<div id="rightbar" class="menu">
@@ -137,7 +137,11 @@
 	<div id ="transcript">
 		<h2 id="transcripttext"> Listening ...</h2>
 	</div>
-
+	
+	<script type="text/javascript" src="javascript/persist.js"></script>
+	<script type="text/javascript" src="javascript/drawing-settings.js"></script>
+	<script type="text/javascript" src="javascript/loadImage.js"></script>
+	<script type="text/javascript" src="javascript/predefinedDrawings.js"></script>
 	<script type="text/javascript" src="javascript/transcript-display.js"></script>
 	<script type="text/javascript" src="javascript/icons.js"></script>
 	<script type="text/javascript" src="javascript/mouse.js"></script>	
@@ -145,11 +149,8 @@
 	<script type="text/javascript" src="javascript/tts.js"></script>
 	<script type="text/javascript" src="javascript/vr.js"></script>	
 	<script type="text/javascript" src="javascript/sound.js"></script>
+	<script type="text/javascript" src="javascript/tutorialDrawing.js"></script>
 	<script type="text/javascript" src="javascript/dbs.js"></script>
-	<script type="text/javascript" src="javascript/persist.js"></script>
-	<script type="text/javascript" src="javascript/drawing-settings.js"></script>
-	<script type="text/javascript" src="javascript/loadImage.js"></script>
-	<script type="text/javascript" src="javascript/predefinedDrawings.js"></script>
-	
+
 </body>
 </html>
